Changed the heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             .bar{width:100%;overflow:hidden}.center .bar{display:inline-block;width:auto}
             
             .tabmenu {
-                background-color: #00ff11;
+                background-color: #00ee87;
                 border: 2px solid #ffffff;
                 color: white;
                 padding: 5px;
@@ -30,7 +30,7 @@
             }
             
             .tm_active {
-                background-color: #ff1111;
+                background-color: #00ee87;
                 border: 2px solid #ffffff;
                 color: white;
                 padding: 5px;
@@ -85,20 +85,27 @@
         <a href="javascript:switchTab('tb_2', 'content_2');" id="tb_2" class="tabmenu">Portfolio</a>
         <a href="javascript:switchTab('tb_3', 'content_3');" id="tb_3" class="tabmenu">About Me!</a>
         <a href="javascript:switchTab('tb_4', 'content_4');" id="tb_4" class="tabmenu">Career</a></center>
+
+<!--<Home>!-->
+
 <div id="content_1" class="tabcontent"> 
 	 <div class= "parallax"> </div>
 <h1><center>Welcome to my Home Page!</center></h1>
 </div> 
+
+<!--<Portfolio>!-->
+
 <div id="content_2" class="tabcontent" style="display:none;">
         <div class= "parallax"> </div>
         <h1><center>This is my Portfolio Page!</center></h1>
         <div>
-        <a href="https://docs.google.com/spreadsheets/d/1lp6QPkibC0W75CWthANtFiG9H5KcVKk8D0N_vecdKdo/edit?usp=sharing">Link to Homework Help</a>
         <a target="_blank" href="https://scratch.mit.edu">
             <img src="images/scratch.jpg" height="100">
         </a>
         </div>
 </div>
+
+<!--<About Me>!-->
 
 <div id="content_3" class="tabcontent" style="display:none;">
         <div class= "parallax"> </div>
